buildscript {
    repositories {
        google()
        mavenCentral()
    }
}

apply plugin: 'com.android.application'
apply plugin: 'kotlin-android'

android {
    compileSdkVersion 34
    defaultConfig {
        applicationId "com.Denzo.firl"
        minSdkVersion 26
        targetSdkVersion 34
        versionCode 1
        versionName "1.0"
        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
        vectorDrawables.useSupportLibrary = true
    }
    tasks.withType(JavaCompile).configureEach{
        options.fork = true
        options.forkOptions.jvmArgs +=[
                '--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
                '--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
                '--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED']
    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }
    kotlinOptions {
        jvmTarget = '1.8'
    }

    namespace 'com.Denzo.firl'
}

dependencies {
    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
    implementation 'com.jakewharton:butterknife:10.2.3'
    implementation 'androidx.core:core:1.13.1'
    implementation 'androidx.recyclerview:recyclerview:1.3.2'
    implementation 'androidx.activity:activity:1.9.0'
    androidTestImplementation 'junit:junit:4.13.2'
    annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.3'
    implementation 'com.jakewharton.timber:timber:5.0.1'
    implementation 'com.google.firebase:firebase-auth:23.0.0'
    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
    implementation 'com.google.code.gson:gson:2.10.1'
    implementation 'com.github.iammert:MultiSearchView:0.3'
    implementation 'de.hdodenhof:circleimageview:3.1.0'
    implementation 'com.theartofdev.edmodo:android-image-cropper:2.6.0'
    implementation 'com.ms-square:expandableTextView:0.1.4'
    implementation 'de.hdodenhof:circleimageview:3.1.0'
    implementation 'com.caverock:androidsvg:1.2.2-beta-1'
    implementation 'com.github.bxute:StoryView:v1.0'
    implementation 'com.squareup.picasso:picasso:2.71828'
    implementation 'com.github.ittianyu:BottomNavigationViewEx:1.2.4'
    implementation 'com.google.firebase:firebase-storage:21.0.0'
    implementation 'com.lorentzos.swipecards:library:1.0.9'
    implementation 'com.github.bumptech.glide:glide:4.12.0'
    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
    implementation "androidx.appcompat:appcompat:1.7.0"
    implementation "com.google.android.material:material:1.12.0"
    androidTestImplementation 'androidx.test.ext:junit:1.2.1'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.6.1'
    implementation 'com.jakewharton.timber:timber:5.0.1'
    implementation "androidx.coordinatorlayout:coordinatorlayout:1.2.0"
    implementation 'com.google.android.material:material:1.12.0'
    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
    implementation "com.google.firebase:firebase-auth:23.0.0"
    implementation 'com.github.AsynctaskCoffee:tinderlikecardstack:1.0'
    implementation 'com.google.firebase:firebase-analytics:22.0.2'
    implementation 'com.google.firebase:firebase-database:21.0.0'
}

repositories {
    google()
    mavenCentral()
    maven { url 'https://jitpack.io' }
}
